fixed colors on mobile

--- a/css/landing-mobile.css
+++ b/css/landing-mobile.css
@@ -44,7 +44,7 @@
 
 
 	#letsconnect {
-		border-bottom: 1px dashed #ff4900;
+		border-bottom: 1px dashed #ff1e00;
 		padding-bottom: 60px;
 	}
 
@@ -68,7 +68,7 @@
 		#letsconnect .letsconnect_question .active dt .phrase {
 			padding-left: 5px;
 			margin-right: 70px;
-			background-color: #ff4900;
+			background-color: #ff1e00;
 		}
 
 	#letsconnect .letsconnect_question dt .term {
@@ -98,7 +98,7 @@
 		width: auto;
 		max-width: 100%;
 		position: relative;
-		background-color: #ff4900;
+		background-color: #ff1e00;
 		padding: 20px;
 		height: auto;
 	}
